[package]
name = "ai_dhcp"
version = "0.1.0"
edition = "2024"

[dependencies]
# cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
cyw43 = { version = "0.6.0", features = ["defmt"] }
cyw43-firmware = { version = "0.1.0", features = ["wifi"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
edge-dhcp = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread",
] }
embassy-net = { version = "0.8.0", features = [
    "defmt",
    "proto-ipv4",
    "udp",
    "medium-ethernet",
] }
embassy-rp = { version = "0.9.0", features = [
    "critical-section-impl",
    "defmt",
    "rp2040",
    "time-driver",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
heapless = { version = "0.8.0", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

static_cell = { version = "2.1.1" }
# The same version as `static_cell`.
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
