[package]
name = "ai_dhcp"
description = "A satirical AI-enabled DHCP server"
authors = ["RemasteredArch"]
version = "0.1.0"
readme = true

repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[workspace]
members = ["lib/*"]
resolver = "3"

package.repository = "https://github.com/RemasteredArch/ai_dhcp"
package.license = "MPL-2.0"
package.edition = "2024"
package.publish = false

[workspace.lints]
clippy.nursery = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }
clippy.future_not_send = "allow"
clippy.single_match_else = "allow"

[workspace.dependencies]
ai_dhcp_core = { version = "*", path = "./lib/ai_dhcp_core/" }
defmt = "1.0.1"

[dependencies]
ai_dhcp_core.workspace = true
cortex-m-rt = "0.7.5"
cyw43 = { version = "0.6.0", features = ["defmt"] }
cyw43-firmware = { version = "0.1.0", features = ["wifi"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }
defmt.workspace = true
defmt-rtt = "1.1.0"
edge-dhcp = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread",
] }
embassy-net = { version = "0.8.0", features = [
    "defmt",
    "proto-ipv4",
    "udp",
    "medium-ethernet",
] }
embassy-rp = { version = "0.9.0", features = [
    "critical-section-impl",
    "defmt",
    "rp2040",
    "time-driver",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
heapless = { version = "0.8.0", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

static_cell = { version = "2.1.1" }
# The same version as `static_cell`.
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
